@@ -22,6 +22,7 @@
 * Basic theme setup.
 */ 
 function if_theme_setup() {
+	global $content_width;
 	if ( ! isset( $content_width ) ) $content_width = 608; //Set content width
 	
 	add_theme_support(
